# rusty-pinch

./: .dockerignore  .env.example  .gitignore  CONTINUITY.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md
.github/workflows/: ci.yml  docker-publish.yml  release.yml
assets/: README.md
assets/skills/: README.md  weather.rhai
deploy/config/: config.alloy
deploy/container/: Dockerfile  README.md  docker-compose.example.yml  docker-compose.rpi.yml  entrypoint.sh  rusty-pinch.env.example  rusty-pinch.rpi.env.example
deploy/systemd/: README.md  rusty-pinch-telegram.service  rusty-pinch-whatsapp.service  rusty-pinch.env.example
docs/: architecture.md  open-source-publish-checklist.md  product-specification.md  production-healthcheck.md  production_development_plan AI System Foundation for Rusty Pinch.md  promotion.md  public-docs-manifest.md  release.md  runbook-raspberry-pi.md  runbook.md  testing.md
src/: app.rs  bus.rs  channels.rs  codex.rs  config.rs  evolution.rs  lib.rs  main.rs  monitor.rs  observability.rs  prompt.rs  provider.rs  pulse.rs  session.rs  skills.rs  telemetry.rs  tools.rs
tests/: channels.rs  evolution_guard.rs  observability.rs  pulse_persistence.rs  smoke.rs  tools.rs
