[package]
name = "rusty-pinch"
version = "0.1.0"
edition = "2021"
description = "Rusty Pinch clean Rust packaging track"
license-file = "LICENSE"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["clock"] }
clap = { version = "4.5", features = ["derive"] }
ctrlc = "3.4"
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tungstenite = "0.24"

[dev-dependencies]
tempfile = "3.15"
