[package]
name = "rusty-pinch"
version = "0.1.0"
edition = "2021"
description = "Rusty Pinch clean Rust packaging track"
license-file = "LICENSE"

[dependencies]
anyhow = "1.0"
base64 = "0.22"
chrono = { version = "0.4", features = ["clock"] }
clap = { version = "4.5", features = ["derive"] }
ctrlc = "3.4"
dotenvy = "0.15"
ed25519-dalek = "2.1"
hmac = "0.12"
opentelemetry = "0.27"
opentelemetry-otlp = { version = "0.27", features = ["grpc-tonic", "metrics", "trace"] }
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio"] }
tokio = { version = "1.43", features = ["rt-multi-thread", "time"] }
tracing = "0.1"
tracing-opentelemetry = "0.28"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
rhai = "1.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tungstenite = "0.24"

[dev-dependencies]
tempfile = "3.15"
